# crypto-fiat-converter

./: pyproject.toml  run.py
config/: api.yaml
src/: container.py  conversion_type.py  fiat_currencies.py  output.py  util.py
src/api/: api_adapter.py  endpoints.py
src/api/coingecko/: coingecko_api_adapter.py  coingecko_id_mapper.py
src/lib/: http_request.py  input_validation.py
